Rework gameplay and UI

--- a/phantom-field.csproj
+++ b/phantom-field.csproj
@@ -9,4 +9,25 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="sounds\lose.wav" />
+    <None Remove="sounds\start.wav" />
+    <None Remove="sounds\win.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="sounds\click.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sounds\lose.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sounds\start.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sounds\win.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
