--- a/phantom-field.csproj
+++ b/phantom-field.csproj
@@ -14,9 +14,11 @@
     <None Remove="Audio\bgm.wav" />
     <None Remove="Audio\door_open.wav" />
     <None Remove="Audio\gushing_wind.wav" />
+    <None Remove="Audio\lock_talisman.wav" />
     <None Remove="Audio\lose.wav" />
     <None Remove="Audio\phantom_exorcized.wav" />
     <None Remove="Audio\phantom_laugh.wav" />
+    <None Remove="Audio\place_talisman.wav" />
     <None Remove="Audio\start.wav" />
     <None Remove="Audio\win.wav" />
     <None Remove="Images\BGGame.png" />
@@ -35,10 +37,16 @@
     <Content Include="Audio\gushing_wind.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Audio\lock_talisman.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Audio\phantom_exorcized.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Audio\phantom_laugh.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Audio\place_talisman.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\BGGame.png">
